--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,11 @@
 /* modal cookie */
+p{
+    font-family: 'Bebas Neue', cursive;
+}
+span, button, a, input {
+    font-family: 'Montserrat', sans-serif;
+}
+
 .cookies-body {
     width: auto;
     min-height: 80px;
@@ -12,7 +19,6 @@
     padding-right: 20px;
 }
 .cookies-body span {
-    font-family: Montserrat;
     font-size: 14px;
     line-height: 1;
 }
@@ -77,7 +83,6 @@
     text-align: center;
 }
 .bottlesForma .bottlesFormaPresentational .par {
-    font-family: Bebas Neue;
     font-size: 60px;
     font-weight: 550;
     height: 72px;
@@ -85,6 +90,7 @@
 }
 
 .bottlesForma .bottlesFormaPresentational .underPar {
+    font-family: 'Montserrat', sans-serif;
     font-weight: bold;
 }
 
@@ -193,7 +199,6 @@
     
 }
 .description p {
-    font-family: Bebas Neue;
     font-size: 60px;
     font-weight: normal;
     margin-bottom: 0px;
@@ -244,7 +249,6 @@
 .whysimpleat-header p {
     margin-bottom: 0px;
     font-size: 60px;
-    font-family: Bebas Neue;
     line-height: normal;
 
 }
@@ -283,7 +287,6 @@
     margin-bottom: 37px;
 }
 .whysimpleat-infoBlock p {
-    font-family: Bebas Neue;
     font-size: 24px;
 }
 
@@ -324,7 +327,6 @@
     text-align: center;
 }
 .testimonial-header p {
-    font-family: Bebas Neue;
     font-size: 60px;
     margin: 0px;
     line-height: normal;
@@ -347,6 +349,7 @@
     position: absolute;
 }
 .testimonial-card-info {
+    line-height: 1;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -356,6 +359,7 @@
 
 }
 .testimonial-card-info p {
+    font-family: 'Montserrat', sans-serif;
     color: #ffffff;
     font-size: 14px;
     font-weight: bold;
@@ -363,6 +367,7 @@
     line-height: normal;
 }
 .testimonial-card-info span {
+    line-height: 1;
     font-size: 13px;
     color: #ffffff;
 }
@@ -390,7 +395,6 @@
     margin-bottom: 20px;
 }
 .mainIngredients-header p {
-    font-family: Bebas Neue;
     font-size: 60px;
     margin: 0;
     line-height: normal;
@@ -418,7 +422,6 @@
     align-items: center;
 }
 .mainIngredients-block-description p{
-    font-family: Bebas Neue;
     font-size: 24px;
     
 }
@@ -441,7 +444,6 @@
     line-height: 1;
 }
 .nutritionFacts-header p {
-    font-family: Bebas Neue;
     font-size: 60px;
     margin: 0px;
     line-height: normal;
@@ -458,15 +460,17 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    font-family: 'Montserrat', sans-serif;
 }
 .el-description {
     text-align: end;
-    margin-right: 25px;
+    margin-right: 17px;
 }
 .el-description p{
     font-size: 18px;
     font-weight: bold;
     margin-bottom: 5px;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .el-description span {
@@ -480,12 +484,13 @@
 }
 .right-el-description {
     text-align: start;
-    margin-left: 25px;
+    margin-left: 17px;
 }
 .right-el-description p{
     font-size: 18px;
     font-weight: bold;
     margin-bottom: 5px;
+    font-family: 'Montserrat', sans-serif;
 }
 .right-el-description span {
     font-size: 14px;
@@ -519,7 +524,6 @@
     text-align: center;
 }
 .stats-header p {
-    font-family: Bebas Neue;
     font-size: 60px;
     line-height: normal;
 }
@@ -542,7 +546,6 @@
     padding-bottom: 5%;
 }
 .superFood-header p {
-    font-family: Bebas Neue;
     font-size: 60px;
     line-height: normal;
 }
@@ -560,7 +563,6 @@
     cursor: pointer;
 }
 .superFood-categories p {
-    font-family: Bebas Neue;
     font-size: 24px;
     line-height: normal;
     margin: 0px;
@@ -580,7 +582,6 @@
 }
 .superFood-content p {
     font-size: 30px;
-    font-family: Montserrat;
     margin: 0px;
     line-height: normal;
     top: 50%;
@@ -626,7 +627,6 @@
     text-align: center;
 }
 .joinUs-header p {
-    font-family: Bebas Neue;
     font-size: 60px;
     margin: 0px;
     line-height: normal;
@@ -679,7 +679,6 @@ footer {
 }
 .another-links a{ 
     color: #ffffff;
-    font-family: Montserrat;
     text-transform: uppercase;
 }
 .vl {
